# upskill

./: .gitignore  AGENTS.md  Makefile  README.md  action.yml  fastagent.config.yaml  pyproject.toml  smoke_test.sh  upskill.config.yaml
.github/workflows/: ci.yml
scripts/: __init__.py  check.py  cpd.py  format.py  lint.py  typecheck.py
scripts/hf/: job_entrypoint.sh  job_entrypoint_eval_fast_agent.sh  job_entrypoint_fast_agent.sh  submit_hf_eval_job.sh  submit_hf_fast_agent_job.sh  submit_hf_job.sh
src/upskill/: __init__.py  artifacts.py  ci.py  cli.py  config.py  evaluate.py  fast_agent_cli.py  fastagent_integration.py  generate.py  hf_jobs.py  logging.py  manifest_utils.py  model_resolution.py  models.py  result_parsing.py  trace_export.py  verifiers.py
src/upskill/agent_cards/: evaluator.md  judge.md  skill_gen.md  test_gen.md
src/upskill/executors/: __init__.py  base.py  contracts.py  local_fast_agent.py  remote_fast_agent.py
src/upskill/validators/: hsa.py
tests/: conftest.py  test_agent_card_guardrails.py  test_check_script.py  test_ci.py  test_cli_eval_jobs.py  test_cli_generate_benchmark.py  test_config.py  test_cpd.py  test_execution_backends.py  test_hf_jobs.py  test_model_resolution.py  test_ranking.py  test_verifiers.py
tests/fixtures/ci_action_repo/.upskill/: evals.yaml
tests/fixtures/ci_action_repo/evals/: example.yaml
tests/fixtures/ci_action_repo/skills/example-skill/: SKILL.md
