[project]
name = "upskill"
version = "0.2.1"
description = "Generate and evaluate agent skills"
readme = "README.md"
requires-python = ">=3.13.5,<3.14"
dependencies = [
    "click>=8.1",
    "fast-agent-mcp>=0.6.7",
    "pydantic>=2.0",
    "python-dotenv>=1.0",
    "pyyaml>=6.0",
    "rich>=13.0",
]

[project.urls]
Homepage = "https://github.com/huggingface/upskill"
Repository = "https://github.com/huggingface/upskill"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.11",
    "ty>=0.0.23",
]

[project.scripts]
upskill = "upskill.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/upskill"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = [
    "B",
    "C90",
    "E",
    "F",
    "I",
    "RUF",
    "SIM",
    "TCH",
    "UP",
]
ignore = ["E501"]

[tool.ruff.lint.mccabe]
max-complexity = 15

[tool.pytest.ini_options]
testpaths = ["tests"]
